--- a/pract/practice.css
+++ b/pract/practice.css
@@ -5,3 +5,232 @@ body{
     box-sizing: border-box;
 
 }
+
+.canvas{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fcf1f1;
+    width: 100%;
+    height: 100vh;
+}
+
+.circle{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 80vmin;
+    height: 80vmin;
+    border-radius: 50%;
+    background-color: hsla(39, 100%, 63%, 0.661);
+}
+
+.pot{
+    position: absolute;
+    border-bottom: 25vmin solid #835050;
+    border-left: 5vmin solid transparent;
+    border-right: 5vmin solid transparent;
+    height: 0;
+    width: 20vmin;
+    bottom: 15vmin;
+    transform: rotate(180deg);
+    border-radius:3vmin ;
+    
+}
+
+
+.pot::after{
+    content: "";
+    position: absolute;
+    width: 20vmin;
+    height: 1vmin;
+    background-color: black;
+
+}
+
+.eyes{
+    position: absolute;
+    width: 3vmin;
+    height: 3vmin;
+    background-color: black;
+    border-radius: 50%;
+    bottom: -15vmin;
+    box-shadow: 16vmin 0 black;
+    animation: blink 1.4s infinite;
+
+}
+
+@keyframes blink {
+    0% {transform: scale(1,0.1);}
+    100% {transform: scale(1,1);}
+
+    
+}
+
+.cheeks{
+    position:absolute;
+    width: 5vmin;
+    height: 2vmin;
+    top: 10vmin;
+    left: 1vmin;
+    background-color: red;
+    border-radius: 50%;
+    opacity: 30%;
+    box-shadow: 14vmin 0 red;
+
+}
+
+.mouth{
+    position: absolute;
+    width: 3vmin;
+    height: 3vmin;
+    top: 8vmin;
+    left: 7.8vmin;
+    border-radius: 50%;
+    background: transparent;
+    border-top: 1vmin solid black;
+
+}
+
+.cactus{
+    position:absolute;
+    width: 15vmin;
+    height: 30vmin;
+    top: 15vmin;
+    left: 25vmin;
+    background-color: rgb(96, 167, 117);
+    border-radius: 45%;
+    border: 1vmin solid black;
+    
+}
+
+.cactus::before{
+    content: "";
+    position: absolute;
+    width: 5vmin;
+    height: 30vmin;
+    left: 6vmin;
+    background:transparent;
+    border-radius: 50%;
+    border-right: 1vmin solid #335d2d;
+
+}
+.cactus::after{
+    content: "";
+    position: absolute;
+    width: 5vmin;
+    height: 30vmin;
+    left: 6vmin;
+    background:transparent;
+    border-radius: 50%;
+    border-left: 1vmin solid #335d2d;
+
+}
+
+.cactussmall{
+    position: absolute;
+    width: 17vmin;
+    height: 20vmin;
+    top:25vmin;
+    right: 28vmin;
+    background-color: #799351;
+    border-radius: 45%;
+    border: 1vmin solid black;
+}
+
+.cactussmall::before{
+    content: "";
+    position: absolute;
+    width: 5vmin;
+    height: 20vmin;
+    left: 6vmin;
+    background-color: transparent;
+    border-radius: 50%;
+    border-right:1 vmin solid #335d2d;
+}
+
+.cactussmall::after{
+    content: "";
+    position: absolute;
+    width: 5vmin;
+    height: 20vmin;
+    left: 6vmin;
+    background-color: transparent;
+    border-radius: 50%;
+    border-left:1 vmin solid #335d2d;
+}
+
+.pricks{
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left:1vmin solid transparent ;
+    border-left:1vmin solid transparent ;
+    border-bottom:7vmin solid #335d2d ;
+    transform: rotate(-45deg);
+}
+.pricks::before{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 5vmin;
+    left: 10vmin;
+    border-left:1vmin solid transparent ;
+    border-left:1vmin solid transparent ;
+    border-bottom:7vmin solid #335d2d ;
+    transform: rotate(90deg);
+
+}
+.pricks::after{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 5vmin;
+    left: -10vmin;
+    border-left:1vmin solid transparent ;
+    border-left:1vmin solid transparent ;
+    border-bottom:7vmin solid #335d2d ;
+
+}
+
+.pricksright{
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left:1vmin solid transparent ;
+    border-left:1vmin solid transparent ;
+    border-bottom:7vmin solid #335d2d ;
+    transform: rotate(-45deg);
+    
+}
+.prickright::before{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 10vmin;
+    left: 9vmin;
+    border-left:1vmin solid transparent ;
+    border-left:1vmin solid transparent ;
+    border-bottom:7vmin solid #335d2d ;
+    transform: rotate(90deg);
+
+}
+.pricksright::after{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top:4vmin;
+    left: 7vmin;
+    border-left:1vmin solid transparent ;
+    border-left:1vmin solid transparent ;
+    border-bottom:7vmin solid #335d2d ;
+    transform: rotate(60deg);
+
+}
+
